# Quantum-Commander

./: .env.save  .gitignore  CONTRIBUTING.md  Makefile  README.md  WARP.md  package.json  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
.warp/workflows/: quantum-commander.yaml
_diagnostics/: .latest_b  .latest_ts
_diagnostics/20250915-104202/: filehashes.txt  git.txt  ps.txt  qc-blueprint-watcher.status.txt  qc-blueprint-watcher.unit.txt  quantum-commander.status.txt  routes.list.txt  routes.scan.txt  ss.txt
_diagnostics/20250915-112208/: git.txt  ps.txt  quantum-commander.status.txt  ss.txt
_diagnostics/20250915-112457/: git.txt  ps.txt  qc-blueprint-watcher.timer.txt  quantum-commander.journal.txt  quantum-commander.status.txt  ss.txt
_diagnostics/20250915-131458/: git.txt  ps.txt  quantum-commander.status.txt  ss.txt  system.txt
_diagnostics/20250915-131729/: git.txt  ps.txt  quantum-commander.status.txt  quantum-commander.unit.txt  ss.txt
_diagnostics/20250915-142750/: git.txt  ps.txt  python.txt  qc-blueprint-watcher.timer.unit.txt  quantum-commander.status.txt  ss.txt
app/: main.py  settings.py
commander/: agent.py  bots_dal.py  commander.py  ensemble.py  routes_bots.py  routes_chats.py  routes_diagnostics.py  routes_ensemble.py  routes_extensions.py  routes_files.py  routes_kb.py  routes_ops.py  routes_patch.py  routes_pty_ws.py  routes_search.py  routes_self.py  routes_skills.py  routes_sse.py  routes_supabase.py  routes_vision.py  routes_vscode.py
data/: bots.json  patch_log.json  skills.json
deploy/: README.md  caddy.template.json  nginx.conf  render_nginx.sh
extensions/: notifications.py
lib/: QuantumSync.js
logs/: uvicorn-20250910-204949.out  uvicorn-20250910-205039.out
mcp/: qc_mcp.py  qc_mcp_server.py
scripts/: assistant_stack.sh  migrate_assistant.sh  migrate_to_supabase.py  qc_diagnostics.sh  qc_vscode.sh  run-backend.sh  setup_gunicorn_service.sh
templates/: basic.html  index.html  terminal.html  user_terminal.html
tests/: conftest.py  test_bots.py  test_files.py  test_health.py  test_kb.py  test_sse.py  test_ws.py
uploads/: _meta.json
(+26 files in other folders)
