[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[project]
name = "fix-assistant"
version = "0.1.0"
description = "Fix Assistant backend (FastAPI) centralizing config and transports"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Lorenzo McCray" }]
keywords = ["fastapi", "assistant", "config", "sse", "websocket"]
dependencies = [
  "fastapi>=0.111",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.7",
]

[project.optional-dependencies]
dev = [
  "pytest>=7",
  "pytest-asyncio>=0.23",
  "httpx>=0.27",
  "anyio>=4",
  "black>=24.3",
  "ruff>=0.4",
]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-q"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src"]
