[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[project]
name = "fix-assistant"
version = "0.1.0"
description = "Fix Assistant backend (FastAPI) centralizing config and transports"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Lorenzo McCray" }]
keywords = ["fastapi", "assistant", "config", "sse", "websocket"]
dependencies = [
  "fastapi>=0.111",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.7",
  "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
  "pytest>=7",
  "pytest-asyncio>=0.23",
  "pytest-cov>=4",
  "respx>=0.20.2",
  "anyio>=4",
  "black>=24.3",
  "ruff>=0.4",
  "mypy>=1.7",
]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "UP", "B"]

[tool.black]
line-length = 100

[tool.mypy]
python_version = "3.13"
namespace_packages = true
mypy_path = ["src"]
warn_unused_configs = true
check_untyped_defs = true
disallow_untyped_defs = true
strict_optional = true
show_error_codes = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-q"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
# Use src-layout: explicitly include both packages so imports like `backend.*` resolve
packages = [
  "src/backend",
  "src/fix_assistant",
]
